# debateclub

./: LICENSE  README.md  arena.py  pyproject.toml
debateclub/: arena.py  argumentation.py  db.py  elo.py  judging.py  models.py  utils.py
debateclub/llms/: __init__.py  claude_sonnet.py  gemini_pro.py  gpt4o.py  models_manager.py
tests/: test_arena.py
