[project]
name = "debateclub"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "anthropic>=0.42.0",
    "google-genai>=0.3.0",
    "google-generativeai>=0.8.3",
    "instructor>=1.7.0",
    "jsonref>=1.1.0",
    "pytest>=8.3.4",
    "tabulate>=0.9.0",
]
